--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dotenv": "^8.2.0",
   "express": "^4.16.4",
   "googleapis": "^39.0.0",
+  "lodash": "^4.17.15",
   "nconf": "^0.10.0",
   "nodemon": "^1.19.4",
   "open": "^7.0.0",
@@ -20,7 +21,8 @@
   "node": ">=6.4.0"
  },
  "scripts": {
-  "start": "nodemon google-api.js"
+  "start": "nodemon google-api.js",
+  "yes": "nodemon google-api.js"
  },
  "license": "Apache-2.0"
 }
