--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
   "node": ">=6.4.0"
  },
  "scripts": {
-  "start": "nodemon google-api.js",
-  "yes": "nodemon google-api.js"
+  "start": "nodemon google-api.js"
  },
  "license": "Apache-2.0"
 }
