--- a/.env-example
+++ b/.env-example
@@ -1,1 +1,2 @@
-FOLDER_TO_UPLOAD="/folder/to/upload"
+FOLDER_TO_UPLOAD="/path/to/local/folder/"
+FOLDER_IN_DRIVE_ID="use the folders command to get the ids"
