--- a/package.json
+++ b/package.json
@@ -23,5 +23,6 @@
  "scripts": {
   "start": "node google-api.js"
  },
- "license": "Apache-2.0"
+ "license": "Apache-2.0",
+ "bin": "./google-api.js"
 }
