--- a/.env-example
+++ b/.env-example
@@ -1,2 +1,2 @@
-FOLDER_TO_UPLOAD="/path/to/local/folder/"
-FOLDER_IN_DRIVE_ID="use the folders command to get the ids"
+LOCAL_FOLDERS=[{"name": "folder name", "value": "/folder/path/"},{"name": "another folder name", "value": "/another/folder/path/"}]
+GDRIVE_FOLDERS=[{"name": "some folder", "value": "google drive folder id"},{"name": "other folder", "value": "othe google drive folder id"}]
