--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
  "dependencies": {
   "bluebird": "^3.7.1",
   "chalk": "^2.4.2",
+  "eslint": "^7.22.0",
+  "eslint-plugin-node": "^11.1.0",
+  "eslint-plugin-promise": "^4.3.1",
   "express": "^4.16.4",
   "googleapis": "^39.0.0",
   "inquirer": "^7.1.0",
